# QLL-Eagle-Platform

./: .gitignore  alembic.ini  pyproject.toml
backend/: main.py
backend/adapters/greeks/: dealer_positioning.py  fake.py  gamma_aggregate.py  gamma_exposure.py  gamma_flip.py  max_pain.py  walls.py
backend/adapters/notifications/: noop.py
backend/adapters/storage/: memory.py  postgresql.py  timescale.py
backend/api/: schemas.py  serializers.py
backend/api/routes/: __init__.py  health.py  market.py  options.py
backend/application/: __init__.py
backend/application/use_cases/: __init__.py  calculate_dealer_positioning.py  calculate_gamma_aggregate.py  calculate_gamma_exposure.py  calculate_gamma_flip.py  calculate_greeks.py  calculate_institutional_analysis.py  calculate_max_pain.py  (+3 more)
backend/core/: container.py  logging.py  settings.py
backend/db/: env.py
docs/: api-contract.md  architecture.md  database-schema.md  nt8-contract.md  use-cases.md  websocket-contract.md
docs/adr/: ADR-001-arquitectura-hexagonal.md  ADR-002-python-backend.md  ADR-003-react-nextjs-frontend.md  ADR-004-postgres-timescaledb.md  ADR-005-nt8-cliente-rest-websocket.md  ADR-006-capa-proveedores-desacoplada.md
tests/: test_application_load_option_chain.py  test_application_market_snapshot.py  test_database.py  test_dealer_positioning_engine.py  test_domain_contracts.py  test_gamma_aggregate_engine.py  test_gamma_exposure_engine.py  test_gamma_flip_engine.py  test_greeks_engine.py  test_health.py  test_institutional_analysis.py  test_market_endpoint.py  test_max_pain_engine.py  test_options_endpoint.py  test_walls_engine.py
(+18 files in other folders)
