[project]
name = "qll-eagle-platform"
version = "0.1.0"
description = "QLL Eagle Platform backend"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",
    "httpx2>=0.28",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
